<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="thx.contraintlayoutdemo1.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:srcCompat="@drawable/campnou"
        android:id="@+id/header"
        android:scaleType="centerCrop"
        android:contentDescription="@string/dummy"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/favorite"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/ic_favorite"
        android:id="@+id/favorite"
        android:contentDescription="@string/dummy"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:text="@string/campnou"
        android:layout_width="86dp"
        android:layout_height="22dp"
        android:id="@+id/campnouLabel"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/capacity"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:id="@+id/capacityLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/capacity"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/locationLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/locationLabel" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/capacity_value"
        android:ems="10"
        android:id="@+id/capacity"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/capacityLabel"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/campnouLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="@string/location"
        android:layout_width="86dp"
        android:layout_height="0dp"
        android:id="@+id/locationLabel"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/location" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/location_value"
        android:ems="10"
        android:id="@+id/location"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/capacity"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/capacity"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:text="@string/architect"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:id="@+id/architectLabel"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/architect" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/architect_value"
        android:ems="10"
        android:id="@+id/architect"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/location"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:text="@string/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upload"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/discard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/upload" />

    <TextView
        android:text="@string/campnou_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/description"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/locationLabel"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="73dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
